--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,8 @@ android:layout_height="match_parent">
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:layout_collapseMode="pin"/>
+            app:layout_scrollFlags="scroll|enterAlways" />
 </com.google.android.material.appbar.AppBarLayout>
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="?attr/actionBarSize">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/tab_viewpager"
@@ -30,101 +26,61 @@ android:layout_height="match_parent">
         android:layout_above="@id/tabLayout"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentBottom="true"
-        app:tabGravity="fill"
-        app:tabMode="fixed"
-        app:tabTextColor="@android:color/white"
-        android:background="?attr/colorPrimary" />
+        android:layout_height="match_parent">
 
-</RelativeLayout>
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentBottom="true"
+            app:tabGravity="fill"
+            app:tabMode="fixed"
+            app:tabTextColor="@android:color/white"
+            android:background="?attr/colorPrimary" />
+    </RelativeLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
 
-<!--<com.google.android.material.appbar.CollapsingToolbarLayout-->
-<!--android:id="@+id/collapsing_toolbar"-->
+<!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--android:id="@+id/main_content"-->
 <!--android:layout_width="match_parent"-->
-<!--android:layout_height="wrap_content"-->
-<!--app:contentScrim="?attr/colorPrimary"-->
-<!--app:layout_scrollFlags="scroll|exitUntilCollapsed">-->
-<!--<ImageView-->
+<!--android:layout_height="match_parent">-->
+
+<!--<android.support.design.widget.AppBarLayout-->
+<!--    android:id="@+id/appbar"-->
 <!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="256dp"-->
-<!--    android:scaleType="centerCrop"-->
-<!--    app:layout_collapseMode="parallax"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->
 
-<!--    android:src="@drawable/movies_header_icon"/>-->
-<!--</com.google.android.material.appbar.CollapsingToolbarLayout>-->
+<!--    <android.support.v7.widget.Toolbar-->
+<!--        android:id="@+id/toolbar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="?attr/actionBarSize"-->
+<!--        android:background="?attr/colorPrimary"-->
+<!--        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
+<!--        app:layout_scrollFlags="scroll|enterAlways|snap" />-->
 
 
 
-<!--<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:id="@+id/drawer_layout_main"-->
+<!--</android.support.design.widget.AppBarLayout>-->
+
+<!--<android.support.v4.view.ViewPager-->
+<!--    android:id="@+id/viewpager"-->
 <!--    android:layout_width="match_parent"-->
 <!--    android:layout_height="match_parent"-->
-<!--    android:fitsSystemWindows="true"-->
-<!--    tools:context=".ui.main.MainActivity"-->
-<!--    tools:openDrawer="start">-->
+<!--    app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:orientation="vertical">-->
+<!--<android.support.design.widget.FloatingActionButton-->
+<!--    android:id="@+id/fab"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_gravity="end|bottom"-->
+<!--    android:layout_margin="@dimen/fab_margin"-->
+<!--    android:src="@drawable/ic_done" />-->
 
-<!--        <androidx.appcompat.widget.Toolbar-->
-<!--            android:id="@+id/toolbar_main"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="?attr/actionBarSize"-->
-<!--            android:background="@color/colorPrimary"-->
-<!--            android:elevation="@dimen/toolbar_elevation"-->
-<!--            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"-->
-<!--            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />-->
-
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/movies"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/tv_error_message_display"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:padding="16dp"-->
-<!--            android:text="@string/error_message"-->
-<!--            android:textSize="@dimen/msg_text_size"-->
-<!--            android:visibility="invisible" />-->
-
-<!--        <ProgressBar-->
-<!--            android:id="@+id/pb_loading_indicator"-->
-<!--            android:layout_height="42dp"-->
-<!--            android:layout_width="42dp"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:visibility="invisible" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/no_favorites_added"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="@font/pt_sans"-->
-<!--            android:textSize="@dimen/text_size"-->
-<!--            android:visibility="invisible"-->
-<!--            android:text="@string/no_favorites"-->
-<!--            tools:text="Data not available." />-->
-<!--    </LinearLayout>-->
-
-<!--    <com.google.android.material.navigation.NavigationView-->
-<!--        android:id="@+id/nav_view"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:layout_gravity="start"-->
-<!--        app:headerLayout="@layout/navigation_header"-->
-<!--        app:menu="@menu/navigation_items_main" />-->
-<!--</androidx.drawerlayout.widget.DrawerLayout>-->
+<!--</android.support.design.widget.CoordinatorLayout>-->
