--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/app_bar_image"
                 android:layout_width="match_parent"
                 android:layout_height="256dp"
-                android:scaleType="centerCrop"
+                android:scaleType="fitXY"
                 android:contentDescription="@string/app_name"
                 app:layout_collapseMode="parallax" />
             <androidx.appcompat.widget.Toolbar
@@ -53,6 +53,6 @@
             app:tabGravity="fill"
             app:tabMode="fixed"
             app:tabTextColor="@android:color/white"
-            android:background="?attr/colorPrimary" />
+            android:background="?attr/colorPrimaryDark" />
     </RelativeLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
