--- a/app/src/main/res/layout/movies_list_item.xml
+++ b/app/src/main/res/layout/movies_list_item.xml
@@ -16,9 +16,10 @@
         <ImageView
             android:id="@+id/list_item_icon"
             android:layout_width="match_parent"
-            android:layout_height="175dp"
+            android:layout_height="275dp"
             android:scaleType="fitXY"
             app:imageUrl="@{movie.image}"
+            android:contentDescription="@string/movie_image_content_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
