--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
@@ -9,57 +10,85 @@
     </data>
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:background="@android:color/darker_gray" >
-
+        android:layout_height="match_parent">
         <ScrollView
+            android:id="@+id/main_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingTop="240dp"
+            android:scrollbars="none">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/detail_activity_horizontal_margin"
-                android:layout_marginTop="@dimen/detail_activity_vertical_margin"
-                android:layout_marginRight="@dimen/detail_activity_horizontal_margin"
-                android:layout_marginBottom="@dimen/detail_activity_vertical_margin">
+                android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/release_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/DetailLabelHeading"
-                    android:text="@{movie.releaseDate}"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="December 18, 2002" />
-
-                <TextView
-                    android:id="@+id/average_rating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/fragment_movie_detail_average_rating_margin"
-                    style="@style/DetailLabelHeading"
-                    android:text="@{movie.averageRating}"
-                    app:layout_constraintLeft_toRightOf="@id/release_date"
-                    app:layout_constraintTop_toTopOf="@id/release_date"
-                    tools:text="7.5 / 10" />
-
-                <TextView
-                    android:id="@+id/movie_description"
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/fragment_movie_detail_description_margin_top"
-                    style="@style/DetailLabelHeading"
-                    android:text="@{movie.description}"
-                    app:layout_constraintTop_toBottomOf="@id/release_date"
-                    app:layout_constraintLeft_toLeftOf="@id/release_date"
-                    tools:text="Set in the fictional world of Middle-earth,
-                                the films follow the hobbit Frodo Baggins as he and the Fellowship
-                                embark on a quest to destroy the One Ring, to ensure the destruction of its maker,
-                                the Dark Lord Sauron"/>
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="32dp"
+                    card_view:cardBackgroundColor="@android:color/white"
+                    card_view:cardCornerRadius="2dp"
+                    card_view:cardElevation="2dp"
+                    card_view:cardUseCompatPadding="true"
+                    card_view:contentPadding="16dp">
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/title"
+                            android:layout_width="match_parent"
+                            android:layout_height="80dp"
+                            android:ellipsize="end"
+                            android:gravity="center_vertical"
+                            android:maxLines="2"
+                            android:textColor="@color/primaryText"
+                            android:textSize="28sp"
+                            tools:text="@{movie.title}" />
+
+                        <TextView
+                            android:id="@+id/releaseDate"
+                            style="@style/DetailField"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:drawableLeft="@drawable/ic_calendar"
+                            android:drawablePadding="16dp"
+                            android:minHeight="48dp"
+                            tools:text="@{movie.releaseDate}" />
+
+                        <LinearLayout
+                            android:id="@+id/overview_container"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <TextView
+                                style="@style/HeaderTextView"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="overview" />
+
+                            <TextView
+                                android:id="@+id/overview"
+                                style="@style/DetailField"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                tools:text="@{movie.description}" />
+
+                        </LinearLayout>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+            </FrameLayout>
         </ScrollView>
+
+
+
+
     </FrameLayout>
 </layout>
