--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#455A64</color>
     <color name="colorPrimaryDark">#1C313A</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="primaryText">#212121</color>
+    <color name="darkPrimary">#512DA8</color>
 </resources>
